--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,28 +1,66 @@
 @import 'config';
 
 .main {
-  width: 375px;
   background: $white;
   padding: 0 20px;
-
+  overflow: hidden;
+  
+  & .brown {
+    color: $darkraspberry;
+  }
+  
+  & hr {
+    margin: 30px auto;
+    width: 320px;
+    color: $darkcharcoal;
+    opacity: 50%;
+  }
+  
+  .time-item {
+    display: flex;
+    gap: 40px;
+    
+    & .dot {
+      height: 5px;
+      position: relative;
+      top: 10px;
+      left: 10px;
+      width: 5px;
+      background: $darkraspberry;
+      border-radius: 50%;
+    }
+    
+    & p {
+      margin-bottom: 5px;
+      
+      span {
+        font-family: 'Outfit', sans-serif;
+        font-weight: 700;
+        color: $darkcharcoal;
+      }
+    }
+    
+  }
+  
   & .img {
     top: 0;
     left: -20px;
-    background-image: url('/images/image-omelette.jpeg');
-    background-position: center;
+    background: url('/images/image-omelette.jpeg');
     background-size: cover;
+    width: 130%;
+    background-position: center;
     position: relative;
+    padding: 0;
+    margin: 0;
     height: 210px;
-    width: 375px;
     margin-bottom: 45px;
   }
-  
   & h1,
   h2 {
-    font-family: "Young Serif", serif;
     line-height: 2rem;
     font-size: 1.8rem;
     margin-bottom: 30px;
+    font-family: "Young Serif", serif;
     color: $darkcharcoal;
     font-weight: 400;
   }
@@ -44,36 +82,70 @@
     margin: 20px 10px;
     flex-direction: column;
     border-radius: 10px;
-    & h3{
+    
+    & h3 {
       color: $darkraspberry;
       font-weight: 600;
-      font-family: 'Outfit',sans-serif;
+      font-family: 'Outfit', sans-serif;
       margin-bottom: 10px;
     }
-    & .time-item{
+    
+  }
+  
+  & .instructions {
+    .dot {
+      background: transparent;
+      color: $darkraspberry;
+      top: 0px;
+    }
+  }
+  
+  .nutritions {
+    hr {
+      margin: -10px auto 10px auto;
+    }
+    
+    & .nutrition-row {
       display: flex;
-      gap: 40px;
-      & .dot{
-        height: 5px;
-        position: relative;
-        top: 15px;
-        left: 10px;
-        width: 5px;
-        background: $darkraspberry;
-        border-radius: 50%;
-      }
-      & p{
-        margin-bottom: 5px;
-        span{
-          font-family: 'Outfit', sans-serif;
-          font-weight: 700;
-          color: $darkcharcoal;
-        }
+      justify-content: flex-start;
+      
+      & .nutrition-row-1 {
+        font-family: 'Outfit', sans-serif;
+        color: $wengebrown;
+        font-weight: 400;
+        margin-bottom: 20px;
+        width: 50%;
+        padding-left: 30px;
       }
       
+      & .nutrition-row-2 {
+        width: 50%;
+        color: $darkraspberry;
+        font-weight: 600;
+        font-family: 'Outfit', sans-serif;
+        padding-left: 30px;
+      }
     }
   }
 }
+.attribution{
+  position: fixed;
+  bottom: 0;
+  margin: 40px auto;
+  width: 100%;
+  background: transparent;
+  z-index: 1;
+  text-align: center;
+  & a{
+    color: $darkcharcoal;
+    text-decoration: none;
+  }
+  & a:hover{
+    background: $darkcharcoal;
+    color: $rosewhite;
+  }
+}
+
 
 
 @include media-lg {
@@ -85,7 +157,7 @@
     transform: translate(-50%, -50%);
     padding: 26px;
     border-radius: 20px;
-
+    
     & .img {
       width: 500px;
       left: 0;
@@ -95,5 +167,22 @@
     & h1 {
       margin-bottom: 26px;
     }
+    
+    & hr {
+      width: 500px;
+    }
+  }
+}
+@include media-md{
+  .main{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    margin: 10px auto;
+  }
+  .img{
+    border-radius: 15px;
   }
 }
